# T-Dongle-C5

./: readme.md
Docs/: Readme.md
arduino/examples/Factory/: Factory.ino  pin_config.h
arduino/examples/SD_Test/: SD_Test.ino
arduino/examples/lcd/: lcd.ino  pin_config.h
arduino/examples/led/: led.ino  pin_config.h
arduino/lib/libraries/: lv_conf.h
arduino/lib/libraries/lcd_st7735/: st7735.cpp  st7735.h
idf/: readme.md
idf/Examples/FACTORY/: CMakeLists.txt  README.md  README_CN.md  sdkconfig
idf/Examples/FACTORY/components/lq/: CMakeLists.txt
idf/Examples/FACTORY/main/: t-dongle-c5-board.h  t-dongle-c5-factory.c
idf/Examples/SD_LED/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
idf/Examples/SD_LED/main/: CMakeLists.txt  sd_led_main.c  t-dongle-c5-board.h
idf/Examples/SPI_LCD/: CMakeLists.txt  README.md  sdkconfig
idf/Examples/SPI_LCD/main/: Kconfig.projbuild  lvgl_demo_ui.c  spi_lcd_touch_example_main.c
idf/Examples/TCP_Serial_Port_Assistant/: README.md  README_CN.md  partitions.csv  sdkconfig.old
idf/Examples/TCP_Serial_Port_Assistant/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  t-dongle-c5-factory.c  tcp_serial_port_ast.c
idf/Examples/TCP_Wireless_Send/: CMakeLists.txt  README.md  sdkconfig
idf/Examples/TCP_Wireless_Send/main/: CMakeLists.txt  tcp_send_main.c
idf/Examples/WiFI_STA/: CMakeLists.txt  README.md
idf/Examples/WiFI_STA/main/: station_example_main.c
idf/Examples/WiFi_AP/: CMakeLists.txt  README.md  sdkconfig
idf/Examples/WiFi_AP/main/: softap_example_main.c
(+1 files in other folders)
